--- a/mywork/project4.ipynb
+++ b/mywork/project4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,7 @@
     "            objpoints.append(objp)\n",
     "            imgpoints.append(corners)\n",
     "\n",
-    "    #ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
-    "    retval, cameraMatrix, distCoeffs, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, images[0].shape[0:2], None, None)\n",
+    "    retval, cameraMatrix, distCoeffs, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, img.shape[0:2], None, None)\n",
     "    return cameraMatrix, distCoeffs\n",
     "\n",
     "\n",
@@ -134,7 +133,7 @@
     "    plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)\n",
     "    \n",
     "    \n",
-    "def plot_image_title(img, title='', text='', output_file):\n",
+    "def plot_image_title(img, title='', text=''):\n",
     "    \n",
     "    font = {'family': 'serif',\n",
     "            'color':  'white',\n",
@@ -148,7 +147,7 @@
     "    plt.text(2, 75.65, text, fontdict=font)\n",
     "    ax.set_title(title, fontsize=50)\n",
     "    plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)\n",
-    "    plt.savefig(output_file)\n",
+    "#     plt.savefig(output_file)\n",
     "    \n",
     "    \n",
     "def binary_image_transform(img):\n",
@@ -181,92 +180,92 @@
     "\n",
     "\n",
     "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
-    "import glob\n",
-    "import cv2\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import matplotlib.image as mpimg\n",
+    "# import glob\n",
+    "# import cv2\n",
     "\n",
-    "## Read in a thresholded image\n",
-    "#warped = mpimg.imread('warped_example.jpg')\n",
-    "## window settings\n",
-    "#window_width = 50 \n",
-    "#window_height = 80 # Break image into 9 vertical layers since image height is 720\n",
-    "#margin = 100 # How much to slide left and right for searching\n",
+    "# ## Read in a thresholded image\n",
+    "# #warped = mpimg.imread('warped_example.jpg')\n",
+    "# ## window settings\n",
+    "# #window_width = 50 \n",
+    "# #window_height = 80 # Break image into 9 vertical layers since image height is 720\n",
+    "# #margin = 100 # How much to slide left and right for searching\n",
     "\n",
-    "def window_mask(width, height, img_ref, center,level):\n",
-    "    output = np.zeros_like(img_ref)\n",
-    "    output[int(img_ref.shape[0]-(level+1)*height):int(img_ref.shape[0]-level*height),max(0,int(center-width/2)):min(int(center+width/2),img_ref.shape[1])] = 1\n",
-    "    return output\n",
+    "# def window_mask(width, height, img_ref, center,level):\n",
+    "#     output = np.zeros_like(img_ref)\n",
+    "#     output[int(img_ref.shape[0]-(level+1)*height):int(img_ref.shape[0]-level*height),max(0,int(center-width/2)):min(int(center+width/2),img_ref.shape[1])] = 1\n",
+    "#     return output\n",
     "\n",
-    "def find_window_centroids(image, window_width, window_height, margin):\n",
+    "# def find_window_centroids(image, window_width, window_height, margin):\n",
     "    \n",
-    "    window_centroids = [] # Store the (left,right) window centroid positions per level\n",
-    "    window = np.ones(window_width) # Create our window template that we will use for convolutions\n",
+    "#     window_centroids = [] # Store the (left,right) window centroid positions per level\n",
+    "#     window = np.ones(window_width) # Create our window template that we will use for convolutions\n",
     "    \n",
-    "    # First find the two starting positions for the left and right lane by using np.sum to get the vertical image slice\n",
-    "    # and then np.convolve the vertical image slice with the window template \n",
+    "#     # First find the two starting positions for the left and right lane by using np.sum to get the vertical image slice\n",
+    "#     # and then np.convolve the vertical image slice with the window template \n",
     "    \n",
-    "    # Sum quarter bottom of image to get slice, could use a different ratio\n",
-    "    l_sum = np.sum(warped[int(3*warped.shape[0]/4):,:int(warped.shape[1]/2)], axis=0)\n",
-    "    l_center = np.argmax(np.convolve(window,l_sum))-window_width/2\n",
-    "    r_sum = np.sum(warped[int(3*warped.shape[0]/4):,int(warped.shape[1]/2):], axis=0)\n",
-    "    r_center = np.argmax(np.convolve(window,r_sum))-window_width/2+int(warped.shape[1]/2)\n",
+    "#     # Sum quarter bottom of image to get slice, could use a different ratio\n",
+    "#     l_sum = np.sum(warped[int(3*warped.shape[0]/4):,:int(warped.shape[1]/2)], axis=0)\n",
+    "#     l_center = np.argmax(np.convolve(window,l_sum))-window_width/2\n",
+    "#     r_sum = np.sum(warped[int(3*warped.shape[0]/4):,int(warped.shape[1]/2):], axis=0)\n",
+    "#     r_center = np.argmax(np.convolve(window,r_sum))-window_width/2+int(warped.shape[1]/2)\n",
     "    \n",
-    "    # Add what we found for the first layer\n",
-    "    window_centroids.append((l_center,r_center))\n",
+    "#     # Add what we found for the first layer\n",
+    "#     window_centroids.append((l_center,r_center))\n",
     "    \n",
-    "    # Go through each layer looking for max pixel locations\n",
-    "    for level in range(1,(int)(warped.shape[0]/window_height)):\n",
-    "\t    # convolve the window into the vertical slice of the image\n",
-    "\t    image_layer = np.sum(warped[int(warped.shape[0]-(level+1)*window_height):int(warped.shape[0]-level*window_height),:], axis=0)\n",
-    "\t    conv_signal = np.convolve(window, image_layer)\n",
-    "\t    # Find the best left centroid by using past left center as a reference\n",
-    "\t    # Use window_width/2 as offset because convolution signal reference is at right side of window, not center of window\n",
-    "\t    offset = window_width/2\n",
-    "\t    l_min_index = int(max(l_center+offset-margin,0))\n",
-    "\t    l_max_index = int(min(l_center+offset+margin,warped.shape[1]))\n",
-    "\t    l_center = np.argmax(conv_signal[l_min_index:l_max_index])+l_min_index-offset\n",
-    "\t    # Find the best right centroid by using past right center as a reference\n",
-    "\t    r_min_index = int(max(r_center+offset-margin,0))\n",
-    "\t    r_max_index = int(min(r_center+offset+margin,warped.shape[1]))\n",
-    "\t    r_center = np.argmax(conv_signal[r_min_index:r_max_index])+r_min_index-offset\n",
-    "\t    # Add what we found for that layer\n",
-    "\t    window_centroids.append((l_center,r_center))\n",
+    "#     # Go through each layer looking for max pixel locations\n",
+    "#     for level in range(1,(int)(warped.shape[0]/window_height)):\n",
+    "# \t    # convolve the window into the vertical slice of the image\n",
+    "# \t    image_layer = np.sum(warped[int(warped.shape[0]-(level+1)*window_height):int(warped.shape[0]-level*window_height),:], axis=0)\n",
+    "# \t    conv_signal = np.convolve(window, image_layer)\n",
+    "# \t    # Find the best left centroid by using past left center as a reference\n",
+    "# \t    # Use window_width/2 as offset because convolution signal reference is at right side of window, not center of window\n",
+    "# \t    offset = window_width/2\n",
+    "# \t    l_min_index = int(max(l_center+offset-margin,0))\n",
+    "# \t    l_max_index = int(min(l_center+offset+margin,warped.shape[1]))\n",
+    "# \t    l_center = np.argmax(conv_signal[l_min_index:l_max_index])+l_min_index-offset\n",
+    "# \t    # Find the best right centroid by using past right center as a reference\n",
+    "# \t    r_min_index = int(max(r_center+offset-margin,0))\n",
+    "# \t    r_max_index = int(min(r_center+offset+margin,warped.shape[1]))\n",
+    "# \t    r_center = np.argmax(conv_signal[r_min_index:r_max_index])+r_min_index-offset\n",
+    "# \t    # Add what we found for that layer\n",
+    "# \t    window_centroids.append((l_center,r_center))\n",
     "\n",
-    "    return window_centroids\n",
+    "#     return window_centroids\n",
     "\n",
-    "def draw_centroids():\n",
-    "    window_centroids = find_window_centroids(warped, window_width, window_height, margin)\n",
+    "# def draw_centroids():\n",
+    "#     window_centroids = find_window_centroids(warped, window_width, window_height, margin)\n",
     "\n",
-    "    # If we found any window centers\n",
-    "    if len(window_centroids) > 0:\n",
+    "#     # If we found any window centers\n",
+    "#     if len(window_centroids) > 0:\n",
     "\n",
-    "        # Points used to draw all the left and right windows\n",
-    "        l_points = np.zeros_like(warped)\n",
-    "        r_points = np.zeros_like(warped)\n",
+    "#         # Points used to draw all the left and right windows\n",
+    "#         l_points = np.zeros_like(warped)\n",
+    "#         r_points = np.zeros_like(warped)\n",
     "\n",
-    "        # Go through each level and draw the windows \t\n",
-    "        for level in range(0,len(window_centroids)):\n",
-    "            # Window_mask is a function to draw window areas\n",
-    "            l_mask = window_mask(window_width,window_height,warped,window_centroids[level][0],level)\n",
-    "            r_mask = window_mask(window_width,window_height,warped,window_centroids[level][1],level)\n",
-    "            # Add graphic points from window mask here to total pixels found \n",
-    "            l_points[(l_points == 255) | ((l_mask == 1) ) ] = 255\n",
-    "            r_points[(r_points == 255) | ((r_mask == 1) ) ] = 255\n",
+    "#         # Go through each level and draw the windows \t\n",
+    "#         for level in range(0,len(window_centroids)):\n",
+    "#             # Window_mask is a function to draw window areas\n",
+    "#             l_mask = window_mask(window_width,window_height,warped,window_centroids[level][0],level)\n",
+    "#             r_mask = window_mask(window_width,window_height,warped,window_centroids[level][1],level)\n",
+    "#             # Add graphic points from window mask here to total pixels found \n",
+    "#             l_points[(l_points == 255) | ((l_mask == 1) ) ] = 255\n",
+    "#             r_points[(r_points == 255) | ((r_mask == 1) ) ] = 255\n",
     "\n",
-    "        # Draw the results\n",
-    "        template = np.array(r_points+l_points,np.uint8) # add both left and right window pixels together\n",
-    "        zero_channel = np.zeros_like(template) # create a zero color channel\n",
-    "        template = np.array(cv2.merge((zero_channel,template,zero_channel)),np.uint8) # make window pixels green\n",
-    "        warpage = np.array(cv2.merge((warped,warped,warped)),np.uint8) # making the original road pixels 3 color channels\n",
-    "        output = cv2.addWeighted(warpage, 1, template, 0.5, 0.0) # overlay the orignal road image with window results\n",
+    "#         # Draw the results\n",
+    "#         template = np.array(r_points+l_points,np.uint8) # add both left and right window pixels together\n",
+    "#         zero_channel = np.zeros_like(template) # create a zero color channel\n",
+    "#         template = np.array(cv2.merge((zero_channel,template,zero_channel)),np.uint8) # make window pixels green\n",
+    "#         warpage = np.array(cv2.merge((warped,warped,warped)),np.uint8) # making the original road pixels 3 color channels\n",
+    "#         output = cv2.addWeighted(warpage, 1, template, 0.5, 0.0) # overlay the orignal road image with window results\n",
     "\n",
-    "    # If no window centers found, just display orginal road image\n",
-    "    else:\n",
-    "        output = np.array(cv2.merge((warped,warped,warped)),np.uint8)\n",
+    "#     # If no window centers found, just display orginal road image\n",
+    "#     else:\n",
+    "#         output = np.array(cv2.merge((warped,warped,warped)),np.uint8)\n",
     "        \n",
-    "    return output\n",
+    "#     return output\n",
     "\n",
     "def hist(img):\n",
     "    return np.sum(img[img.shape[0]//2:,:], axis=0)\n",
@@ -494,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -538,11 +537,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "img = mpimg.imread('../test_images/test2.jpg')\n",
+    "img = mpimg.imread('../camera_cal/calibration1.jpg')\n",
     "undist = undistort_image(img, cameraMatrix, distCoeffs)\n",
     "plot_2_images(img, undist)"
    ]
@@ -556,8 +557,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "binary_image = binary_image_transform(undist)\n",
@@ -573,8 +576,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "img_size = (binary_image.shape[1], binary_image.shape[0])\n",
@@ -591,7 +596,58 @@
     "warped, M = unwarp(binary_image, src, dst)\n",
     "Minv = cv2.getPerspectiveTransform(dst, src)\n",
     "\n",
-    "plot_2_images(binary_image, warped)\n"
+    "plot_2_images(undist, warped)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 585  460]]\n",
+      "\n",
+      " [[ 203  720]]\n",
+      "\n",
+      " [[1126  720]]\n",
+      "\n",
+      " [[ 695  460]]]\n",
+      "[[[320   0]]\n",
+      "\n",
+      " [[320 720]]\n",
+      "\n",
+      " [[960 720]]\n",
+      "\n",
+      " [[960   0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "warped_undist, M2 = unwarp(undist, src, dst)\n",
+    "\n",
+    "src = np.int32(src.reshape((-1,1,2)))\n",
+    "dst = np.int32(dst.reshape((-1,1,2)))\n",
+    "\n",
+    "print(src)\n",
+    "print(dst)\n",
+    "\n",
+    "\n",
+    "cv2.polylines(undist,[src],True,(255,0,0))\n",
+    "cv2.polylines(warped_undist,[dst],True,(255,0,0))\n",
+    "\n",
+    "plot_2_images(undist, warped_undist)"
    ]
   },
   {
@@ -603,12 +659,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines(warped, debug=True)\n",
-    "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines_subsequent_images(warped, left_fit, right_fit, debug=True)\n"
+    "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines_subsequent_images(warped, left_fit, right_fit, debug=False)\n"
    ]
   },
   {
@@ -620,14 +678,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "669.079572343 m 761.678167816 m 0.235046113202\n"
+      "7380.51768465 m 3589.6791103 m -0.0199985290654\n"
      ]
     }
    ],
@@ -645,12 +703,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "result = warp_detected_lines_onto_original(undist, warped, left_fitx, right_fitx, Minv)\n",
-    "plot_2_images(straight_lines1, result)"
+    "plot_2_images(img, result)"
    ]
   },
   {
@@ -662,8 +720,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# title = \"Radius of curvature = {:f}(m)\\nVehicle is {:f}m {!s} of center \".format(np.mean(left_curverad,right_curverad), np.abs(diff_center), 'left')\n",
@@ -680,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -717,7 +777,7 @@
     "        ploty = np.linspace(0, warped.shape[0]-1, warped.shape[0] )\n",
     "        n = len(self.recent_xfitted)\n",
     "        \n",
-    "        if (n > 5):\n",
+    "        if (n > 2):\n",
     "            removed_fitx = self.recent_xfitted.pop\n",
     "            removed_fit = self.recent_fit.pop\n",
     "        \n",
@@ -762,8 +822,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sanity_check(leftLine, rightLine, left_fit, right_fit, left_fitx, right_fitx, left_curverad, right_curverad, diff_center):\n",
@@ -795,8 +857,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sanity_check_update_lines(left_fit, right_fit, left_fitx, right_fitx, warped, leftLine, rightLine):\n",
@@ -817,8 +881,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def pipeline(img, simple=True):\n",
@@ -884,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +997,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1260/1261 [06:44<00:00,  3.40it/s]\n"
+      "100%|█████████▉| 1260/1261 [05:55<00:00,  3.38it/s]\n"
      ]
     },
     {
@@ -941,8 +1007,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: ../output_images/project_video.mp4 \n",
       "\n",
-      "CPU times: user 8min 54s, sys: 34.2 s, total: 9min 28s\n",
-      "Wall time: 6min 45s\n"
+      "CPU times: user 8min 30s, sys: 25.6 s, total: 8min 55s\n",
+      "Wall time: 5min 56s\n"
      ]
     }
    ],
