--- a/project4.ipynb
+++ b/project4.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "\n",
     "%matplotlib qt5\n",
-    "#%matplotlib qt\n"
+    "#%matplotlib qt"
    ]
   },
   {
@@ -62,10 +62,10 @@
     {
      "ename": "SyntaxError",
      "evalue": "non-default argument follows default argument (<ipython-input-503-4284c7188463>, line 75)",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-503-4284c7188463>\"\u001b[0;36m, line \u001b[0;32m75\u001b[0m\n\u001b[0;31m    def plot_image_title(img, title='', text='', output_file):\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -491,7 +491,7 @@
     "    # Combine the result with the original image\n",
     "    result = cv2.addWeighted(original, 1, newwarp, 0.3, 0)\n",
     "#     plt.imshow(result)\n",
-    "    return result\n"
+    "    return result"
    ]
   },
   {
@@ -535,7 +535,7 @@
    ],
    "source": [
     "images = glob.glob('../camera_cal/calibration*.jpg')\n",
-    "cameraMatrix, distCoeffs = calibrate(images)\n"
+    "cameraMatrix, distCoeffs = calibrate(images)"
    ]
   },
   {
@@ -570,7 +570,7 @@
    "outputs": [],
    "source": [
     "binary_image = binary_image_transform(undist)\n",
-    "plot_2_images(img, binary_image)\n"
+    "plot_2_images(img, binary_image)"
    ]
   },
   {
@@ -600,7 +600,7 @@
     "warped, M = unwarp(binary_image, src, dst)\n",
     "Minv = cv2.getPerspectiveTransform(dst, src)\n",
     "\n",
-    "plot_2_images(binary_image, warped)\n"
+    "plot_2_images(binary_image, warped)"
    ]
   },
   {
@@ -618,7 +618,7 @@
     "cv2.polylines(undist,[src],True,(255,0,0))\n",
     "cv2.polylines(warped_undist,[dst],True,(255,0,0))\n",
     "\n",
-    "plot_2_images(undist, warped_undist)\n"
+    "plot_2_images(undist, warped_undist)"
    ]
   },
   {
@@ -635,7 +635,7 @@
    "outputs": [],
    "source": [
     "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines(warped, debug=True)\n",
-    "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines_subsequent_images(warped, left_fit, right_fit, debug=True)\n"
+    "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines_subsequent_images(warped, left_fit, right_fit, debug=True)"
    ]
   },
   {
@@ -773,13 +773,7 @@
     "        self.diffs = np.array([0,0,0], dtype='float') \n",
     "        self.allx = None  \n",
     "        self.ally = None\n",
-    "        self.loss_count=0        \n",
-    "\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        "
+    "        self.loss_count=0"
    ]
   },
   {
@@ -819,7 +813,7 @@
     "        return False\n",
     "#     print('great, passed sanity checks!')\n",
     "    \n",
-    "    return True\n"
+    "    return True"
    ]
   },
   {
@@ -904,11 +898,7 @@
     "    cv2.putText(result,text1,(10,50), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
     "    cv2.putText(result,text2,(10,95), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
     "    \n",
-    "    return result\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    "
+    "    return result"
    ]
   },
   {
@@ -1088,7 +1078,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1101,7 +1093,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -1116,5 +1108,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
