--- a/mywork/project4.ipynb
+++ b/mywork/project4.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "\n",
     "%matplotlib qt5\n",
-    "#%matplotlib qt\n"
+    "#%matplotlib qt"
    ]
   },
   {
@@ -372,7 +372,7 @@
     "    # Combine the result with the original image\n",
     "    result = cv2.addWeighted(original, 1, newwarp, 0.3, 0)\n",
     "#     plt.imshow(result)\n",
-    "    return result\n"
+    "    return result"
    ]
   },
   {
@@ -416,7 +416,7 @@
    ],
    "source": [
     "images = glob.glob('../camera_cal/calibration*.jpg')\n",
-    "cameraMatrix, distCoeffs = calibrate(images)\n"
+    "cameraMatrix, distCoeffs = calibrate(images)"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "outputs": [],
    "source": [
     "binary_image = binary_image_transform(undist)\n",
-    "plot_2_images(img, binary_image)\n"
+    "plot_2_images(img, binary_image)"
    ]
   },
   {
@@ -487,7 +487,7 @@
     "warped, M = unwarp(binary_image, src, dst)\n",
     "Minv = cv2.getPerspectiveTransform(dst, src)\n",
     "\n",
-    "plot_2_images(undist, warped)\n"
+    "plot_2_images(undist, warped)"
    ]
   },
   {
@@ -497,7 +497,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -557,7 +559,7 @@
    "outputs": [],
    "source": [
     "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines(warped, debug=True)\n",
-    "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines_subsequent_images(warped, left_fit, right_fit, debug=False)\n"
+    "left_fit, right_fit, left_fitx, right_fitx = detect_lane_lines_subsequent_images(warped, left_fit, right_fit, debug=False)"
    ]
   },
   {
@@ -695,13 +697,7 @@
     "        self.diffs = np.array([0,0,0], dtype='float') \n",
     "        self.allx = None  \n",
     "        self.ally = None\n",
-    "        self.loss_count=0        \n",
-    "\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        "
+    "        self.loss_count=0"
    ]
   },
   {
@@ -743,7 +739,7 @@
     "        return False\n",
     "#     print('great, passed sanity checks!')\n",
     "    \n",
-    "    return True\n"
+    "    return True"
    ]
   },
   {
@@ -810,11 +806,7 @@
     "    cv2.putText(result,text1,(10,50), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
     "    cv2.putText(result,text2,(10,95), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
     "    \n",
-    "    return result\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    "
+    "    return result"
    ]
   },
   {
@@ -994,7 +986,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1007,7 +1001,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -1022,5 +1016,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
